...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mxY-Wu-dbh">
                                <constraints>
                                    <constraint firstAttribute="width" constant="339" id="BYx-F7-KM8"/>
                                    <constraint firstAttribute="height" constant="30" id="ZCA-0f-2fV"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="8hL-2S-1DQ"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="odM-wG-B12">
                                <constraints>
                                    <constraint firstAttribute="width" constant="339" id="YQj-Bl-2Tf"/>
                                    <constraint firstAttribute="height" constant="30" id="bRe-hp-yX8"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <color key="backgroundColor" red="0.79395312070846558" green="0.99296683073043823" blue="0.98994499444961548" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="295" id="J54-1b-vdE"/>
                                    <constraint firstAttribute="height" constant="43" id="Vlb-bb-4tV"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="SIGN IN">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="SeconViewController:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mqv-6W-anB"/>
                                </connections>
...
