...

        
            
        }else
        {
            // Initialize Alert Controller
            let alertController = UIAlertController(title: "Alert", message: "Please enter valid details", preferredStyle: .alert)
            
            // Initialize Actions
            let yesAction = UIAlertAction(title: "Ok", style: .default) { (action) -> Void in
                print("The user is okay.")
            }
            
            
            // Add Actions
            alertController.addAction(yesAction)
...
